# layerwise-analysis

./: README.md  colm_example.py  colm_rel.sh
dirichlet-lda/: dirichlet-lda-spec.md
metrics/: depth_reindexing.ipynb  extract_layerwise_colm.py  null_data_gens.py  null_tests_ID.ipynb  test.py  twonn_benchmark.ipynb
pipeline-spec/: 01-methodology.md  02-script-spec.md  03-v4-walkthrough.md  04-downstream-analysis-interface.md  05-implementation-plan.md  README.md
qwen-cot/: README.md  qwen-cot-spec.md
reindex_embeddings/: ar_aim_001M_trained_blocks_layerwise.parquet  (+8 more)
v5/: RUNBOOK.md  environment.yml  pyproject.toml
v5/mmu/: __init__.py  concordance.py  config.py  coordination.py  healpix.py  ids.py  io_atomic.py  matching.py  motion.py  probe_report.py  rate_limit.py  reachability.py  records.py  schemas.py
v5/mmu/sources/: __init__.py  base.py  legacy_hdf5.py  local_fits.py  lsdb_mmu.py  ztf_s3.py
v5/scripts/: build_seed_catalogs.py  check_phase0_gate.py  convert_to_hats.py  false_match_report.py  finalize_release.py  finalize_shard.py  local_lsdb_dry_run.py  plan_work_units.py  probe_crossmatch.py  probe_sources.py  run_source_shard.py  upload_hf.py  validate_release.py  verify_gaia_xmatch.py  verify_markers.py
v5/slurm/: build_seeds.sbatch  common.sh  finalize_array.sbatch  probe.sbatch  release.sbatch  run_source_array.sbatch  upload_hf.sbatch  validate_release.sbatch
v5/tests/: test_concordance.py  test_end_to_end.py  test_ids.py  test_local_lsdb_dry_run.py  test_phase0_gate.py  test_phase1_phase2_core.py  test_probe_report.py  test_reachability.py
(+30 files in other folders)
