[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisky"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["mmu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["network: requires outbound internet (skipped by default)"]

[tool.mypy]
files = ["mmu"]
strict = true
